# Design-Patterns

RAII/: CMakeLists.txt
RAII/src/: locks.cpp  memory_allocation.cpp
active_object/: CMakeLists.txt
active_object/src/: main.cpp
command/: CMakeLists.txt
command/src/: cmd.cpp  cmd.h  main.cpp
copy_on_write/: CMakeLists.txt
copy_on_write/src/: copy_on_write.h  main.cpp
factory/: CMakeLists.txt
factory/src/: factory.cpp
memory_pool/: memory_pool.c  memory_pool.h
observer/: CMakeLists.txt
observer/src/: main.cpp
singleton/: CMakeLists.txt
singleton/src/: singleton.cpp
